--- a/basic/src/app/input-output/input-output.component.html
+++ b/basic/src/app/input-output/input-output.component.html
@@ -1,9 +1,5 @@
-<hr />
-<h2>Couting from input-output Component:</h2>
-
-<input type="number" #inputNumber [value]="initNumber" (keyup)="handleKeyup(inputNumber.value)" />
-
-<div class="listBtn">
-    <button (click)="handleIncrement()">increment</button>
-    <button (click)="handleDecrement()">decrement</button>
+<div class="inputOutput">
+    <app-input-output-child [init]="initCounter" (change)="handleChange($event)"></app-input-output-child>
 </div>
+<br />
+<div><strong>Parent number:</strong> {{ parentNumber }}</div>
