add sub routing

--- a/basic/src/app/app.component.html
+++ b/basic/src/app/app.component.html
@@ -1,20 +1,20 @@
 <h1>Home page: {{ title }}</h1>
 
 <button routerLink="" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</button>
-<button routerLink="/binding" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+<button routerLink="/binding" class="nav" routerLinkActive="active-link">
     Biding and Diretive
 </button>
-<button routerLink="/input-output" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+<button routerLink="/input-output" class="nav" routerLinkActive="active-link">
     Input & Output
 </button>
-<button routerLink="/view-child" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+<button routerLink="/view-child" class="nav" routerLinkActive="active-link">
     View child
 </button>
-<button routerLink="/angular-cycle" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
-    Lifecycle
-</button>
-<button routerLink="/rxjs" class="nav" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+<button routerLink="/rxjs" class="nav" routerLinkActive="active-link">
     RxJS
+</button>
+<button routerLink="/angular-cycle" class="nav" routerLinkActive="active-link">
+    Lifecycle
 </button>
 
 <router-outlet></router-outlet>
