--- a/basic/src/app/rxjs/switch-map/switch-map.component.html
+++ b/basic/src/app/rxjs/switch-map/switch-map.component.html
@@ -2,3 +2,20 @@
 <p>
     switch-map works!
 </p>
+<p>
+    ==============================================
+</p>
+<i>Example 2</i>
+<div id="btnClick">Click me!</div>
+
+<p>
+    ==============================================
+</p>
+<i>Example 4</i>
+<h4>Time remaining: <span id="remaining"></span></h4>
+<button id="pause">
+    Pause Timer
+</button>
+<button id="resume">
+    Resume Timer
+</button>
