--- a/basic/src/app/app.component.html
+++ b/basic/src/app/app.component.html
@@ -10,6 +10,12 @@
 <button routerLink="/view-child" class="nav" routerLinkActive="active-link">
     View child
 </button>
+<button routerLink="/pipe" class="nav" routerLinkActive="active-link">
+    Pipe
+</button>
+<button routerLink="/service-http" class="nav" routerLinkActive="active-link">
+    Service & HTTP Service
+</button>
 <button routerLink="/rxjs" class="nav" routerLinkActive="active-link">
     RxJS
 </button>
