--- a/basic/src/app/rxjs/rxjs.component.html
+++ b/basic/src/app/rxjs/rxjs.component.html
@@ -5,11 +5,15 @@
     <button [routerLink]="['/rxjs/takeuntil']" routerLinkActive="curr">takeUntil</button>
     <button [routerLink]="['/rxjs/mapto']" routerLinkActive="curr">mapTo</button>
     <button [routerLink]="['/rxjs/merge']" routerLinkActive="curr">merge</button>
+    <button [routerLink]="['/rxjs/mergemap']" routerLinkActive="curr">mergeMap</button>
     <button [routerLink]="['/rxjs/of']" routerLinkActive="curr">of</button>
     <button [routerLink]="['/rxjs/timer']" routerLinkActive="curr">timer</button>
     <button [routerLink]="['/rxjs/startwith']" routerLinkActive="curr">startWith</button>
     <button [routerLink]="['/rxjs/switchmap']" routerLinkActive="curr">switchMap</button>
+    <button [routerLink]="['/rxjs/tap']" routerLinkActive="curr">tap</button>
+    <button [routerLink]="['/rxjs/take']" routerLinkActive="curr">take</button>
     <button [routerLink]="['/rxjs/takewhile']" routerLinkActive="curr">takeWhile</button>
     <button [routerLink]="['/rxjs/map']" routerLinkActive="curr">map</button>
     <button [routerLink]="['/rxjs/catcherror']" routerLinkActive="curr">catchError</button>
+    <button [routerLink]="['/rxjs/forkjoin']" routerLinkActive="curr">forkJoin</button>
 </nav>
