--- a/basic/src/app/service-http/service-http.component.scss
+++ b/basic/src/app/service-http/service-http.component.scss
@@ -6,3 +6,27 @@
         text-align: center;
     }
 }
+
+.btnAddNew {
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 18px;
+    outline: none;
+
+    &:hover {
+        cursor: pointer;
+        color: blue;
+    }
+}
+
+.btnDelte {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-left: 10px;
+    padding: 5px 10px;
+
+    &:hover {
+        cursor: pointer;
+        color: red;
+    }
+}
