--- a/basic/src/app/app.component.html
+++ b/basic/src/app/app.component.html
@@ -22,5 +22,8 @@
 <button routerLink="/angular-cycle" class="nav" routerLinkActive="active-link">
     Lifecycle
 </button>
+<button routerLink="/material" class="nav" routerLinkActive="active-link">
+    Material
+</button>
 
 <router-outlet></router-outlet>
