--- a/basic/src/app/rxjs/fork-join/fork-join.component.html
+++ b/basic/src/app/rxjs/fork-join/fork-join.component.html
@@ -2,3 +2,11 @@
 <p>
     fork-join works!
 </p>
+<div>
+    <h2>forkJoin Example</h2>
+    <ul>
+        <li>{{ propOne }}</li>
+        <li>{{ propTwo }}</li>
+        <li>{{ propThree }}</li>
+    </ul>
+</div>
