--- a/basic/src/app/rxjs/rxjs.component.html
+++ b/basic/src/app/rxjs/rxjs.component.html
@@ -15,5 +15,6 @@
     <button [routerLink]="['/rxjs/takewhile']" routerLinkActive="curr">takeWhile</button>
     <button [routerLink]="['/rxjs/map']" routerLinkActive="curr">map</button>
     <button [routerLink]="['/rxjs/catcherror']" routerLinkActive="curr">catchError</button>
+    <button [routerLink]="['/rxjs/share']" routerLinkActive="curr">share</button>
     <button [routerLink]="['/rxjs/forkjoin']" routerLinkActive="curr">forkJoin</button>
 </nav>
